Preparing to publishing to maven central

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,39 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ninja.jongo</groupId>
+    <groupId>com.hexwit.ninja.jongo</groupId>
     <artifactId>ninja-jongo-module</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>ninja-jongo-module</name>
-    <url>http://maven.apache.org</url>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>
+        This module filling the gap between Ninja framework and MongoDB.
+        In a few simple steps you can integrate MongoDB support into your application.
+        Beside this you get automatic object mapping provided by Jongo and Jackson libraries.
+    </description>
+    <url>https://github.com/hexwit/ninja-jongo</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Aleksandr Savvopulo</name>
+            <email>contact@hexwit.com</email>
+            <url>https://hexwit.com</url>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:hexwit/ninja-jongo.git</connection>
+        <developerConnection>scm:git:git@github.com:hexwit/ninja-jongo.git</developerConnection>
+        <url>git@github.com:hexwit/ninja-jongo.git</url>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
